# boundaries-of-ionospheric-irregularities

./: .gitignore  LICENSE  README.md  config.py  data_processor.py  main.py  pyproject.toml
app/: az_el_to_lot_lon.py  png_to_video_converter.py
app/processors/: data_processor.py  map_processor.py  rinex_processor.py
dataset_labeling/: config.py  main.py  video_labeler.py
dataset_labeling/src/core/: videolabeler.py
dataset_labeling/src/managers/: calculationmanager.py  h5datasetmanager.py
dataset_labeling/src/utils/: mag_converter.py
dataset_markup/: convert_times.py  main.py  pyproject.toml
debug_code/: calc_sat_trajectory.py  plot_graphs.py
docs/: documentation.md
gnss_processor/: config.py  custom_logger.py  main.py  pyproject.toml
gnss_processor/app/: png_to_video_converter.py
gnss_processor/app/pipline/: data_processing_pipeline.py
gnss_processor/app/processors/: map_processor.py  rinex_processor.py  satellite_data_processor.py  simurg_hdf5_processor.py
gnss_processor/app/services/auroral_oval/: boundary_detector.py  cluster_processor.py  crossing_detector.py  sliding_window_processor.py
gnss_processor/app/services/satellite/: flyby_processor.py  trajectory_calculator.py
gnss_processor/app/utils/: time_utils.py
gnss_processor/app/visualization/: png_to_video_converter.py
gnss_processor/app/visualization/plotters/: combined_plotter.py  map_plotter.py  polygon_plotter.py  satellite_plotter.py  timeseries_plotter.py
gnss_processor/debug_code/: calc_sat_trajectory.py  plot_graphs.py
gnss_processor/docs/: documentation_v2.md
gnss_processor/tests/: conftest.py
gnss_processor/tests/performance/: performance_recorder.py
gnss_processor/tests/performance/perf_tests/: test_boundary_crossing_detector.py  test_cluster_processor.py  test_sliding_window.py
gnss_processor/tests/unit/processors/map_processor/: test_map_processor.py  test_map_processor_performans.py
gnss_processor/tests/unit/processors/simurg_hdf5_processor/: test_simurg_hdf5_processor.py  test_simurg_hdf5_processor_edge_cases.py  test_simurg_hdf5_processor_performance.py
gnss_processor/tests/unit/services/auroral_oval/: test_boundary_detector.py  test_cluster_processor.py  test_crossing_detector.py  test_sliding_window.py
nn_training/: calc_dataset_data.py  config.py  data.py  fill_the_dataset.py  main.py  pyproject.toml  train_model_multi.py
scripts/: run_dataset_markup.bash  run_gnss_process.bash  run_nn_training.bash
