[tool.poetry]
name = "boundaries-of-ionospheric-irregularities"
version = "0.1.0"
description = ""
authors = ["Egor Borvenko <borvenkoegor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
