[tool.poetry]
name = "boundaries-of-ionospheric-irregularities"
version = "0.1.0"
description = ""
authors = ["Egor Borvenko <borvenkoegor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
h5py = "^3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
