[tool.poetry]
name = "boundaries-of-ionospheric-irregularities"
version = "0.1.0"
description = ""
authors = ["Egor Borvenko <borvenkoegor@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "3.9.2"
numpy = "2.1.3"
h5py = "3.12.1"
contourpy = "1.3.1"
cycler = "0.12.1"
fonttools = "4.55.0"
kiwisolver = "1.4.7"
packaging = "24.2"
pillow = "11.0.0"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
scikit-learn = "1.6.1"
scipy = "1.15.1"
setuptools = "75.1.0"
six = "1.16.0"
wheel = "0.44.0"
imageio = "^2.37.0"
shapely = "^2.1.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
