[tool.poetry]
name = "bii-processor"
version = "0.1.0"
description = "Part of boundaries of ionospheric irregularities project. This part is responsible for processing raw data."
authors = ["Yuri-ga1 <regota09@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=2.3.3,<3.0.0"
shapely = ">=2.1.2,<3.0.0"
matplotlib = ">=3.10.6,<4.0.0"
h5py = ">=3.14.0,<4.0.0"
imageio = {extras = ["ffmpeg"], version = "^2.37.0"}
scipy = ">=1.10.0,<2.0.0"
scikit-learn = ">=1.3.0,<2.0.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"