[tool.poetry]
name = "bii-network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
h5py = "==3.12.1"
pillow = "==11.0.0"
opencv-python = "==4.11.0.86"
tensorflow = ">=2.19.0,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
pydot = ">=4.0.0,<5.0.0"
graphviz = ">=0.20.3,<0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
