[tool.poetry]
name = "bii-network"
version = "0.1.0"
description = "Part of boundaries of ionospheric irregularities project. This part is responsible for training the neural network."
authors = ["Yuri-ga1 <regota09@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
h5py = ">=3.14.0,<4.0.0"
tensorflow = ">=2.19.0,<3.0.0"
matplotlib = ">=3.10.6,<4.0.0"
scikit-learn = ">=1.3.0,<2.0.0"
numpy = ">=2.3.3,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
